[project]
name = "mzs-tools"
description = "QGIS plugin for italian seismic microzonation"
dynamic = ["version"]
# version = "1.9.5"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
    "esbonio>=0.16.5",
    "JayDeBeApi>=1.2.3",
]
testing = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-qgis>=2.1.0",
]
ci = [
    "qgis-plugin-ci>=2.8.10",
]
docs = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autobuild>=2024.1.1",
]

[tool.qgis-plugin-ci]
plugin_name = "MzS Tools"
plugin_path = "mzs_tools"
project_slug = "mzs-tools"
github_organization_slug = "CNR-IGAG"

[tool.ruff]
target-version = "py39"
line-length = 119
indent-width = 4

# [tool.ruff.lint]
# select = [
#     "A",    # flake8-builtins
#     "ARG",  # flake8-unused-arguments
#     "B", # flake8-bugbear
#     "C90",  # mccabe complexity
#     "COM", # flake8-commas
#     "E",   # pycodestyle errors
#     "F",   # pyflakes
#     "FBT",  # flake8-boolean-trap
#     "FLY", # flynt
#     "I",   # isort
#     "ISC", #  flake8-implicit-str-concat
#     "LOG", # flake8-logging
#     "N",    # pep8-naming
#     "PERF", # Perflint
#     "PGH",  # pygrep-hooks
#     "PIE", # flake8-pie
#     "PL",  # pylint
#     "PTH", # flake8-use-pathlib
#     "PYI", # flake8-pyi
#     "Q",   # flake8-quotes
#     "RET", # flake8-return
#     "RSE", # flake8-raise
#     "RUF",
#     "SIM", # flake8-simplify
#     "SLF", # flake8-self
#     # "T10", # flake8-debugger
#     "T20", # flake8-print
#     "TC", # flake8-type-checking
#     "TD",  # flake8-todos
#     "TID", # flake8-tidy-imports
#     "TRY", # tryceratops
#     "UP", # pyupgrade
#     "W",  # pycodesytle warnings
#     "ANN",  # flake8-annotations
#     "CPY",  # flake8-copyright
#     "D",  # pydocstyle
#     "FIX",  # flake8-fixme
# ]
# ignore = ["TD003", "FBT003", "ISC001", "COM812", "E501", "RUF001", "D100", "D104", "FIX002"]

[tool.setuptools]
packages = ["mzs_tools"]
