[project]
name = "mzs-tools"
description = "QGIS plugin for italian seismic microzonation"
dynamic = ["version"]
# version = "1.9.5"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
    "esbonio>=0.16.5",
    "JayDeBeApi>=1.2.3",
]
testing = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-qt>=4.5.0",
    "pytest-qgis>=2.1.0",
    "pytest-sugar>=1.1.1",
    "factory-boy>=3.3.3",
    "tox>=4.23.2",
]
ci = [
    "qgis-plugin-ci>=2.8.10",
]
docs = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autobuild>=2024.1.1",
]

[tool.qgis-plugin-ci]
plugin_name = "MzS Tools"
plugin_path = "mzs_tools"
project_slug = "mzs-tools"
github_organization_slug = "CNR-IGAG"

[tool.ruff]
target-version = "py39"
line-length = 119
indent-width = 4

# [tool.ruff.lint]
# select = [
#     "A",    # flake8-builtins
#     "ARG",  # flake8-unused-arguments
#     "B", # flake8-bugbear
#     "C90",  # mccabe complexity
#     "COM", # flake8-commas
#     "E",   # pycodestyle errors
#     "F",   # pyflakes
#     "FBT",  # flake8-boolean-trap
#     "FLY", # flynt
#     "I",   # isort
#     "ISC", #  flake8-implicit-str-concat
#     "LOG", # flake8-logging
#     "N",    # pep8-naming
#     "PERF", # Perflint
#     "PGH",  # pygrep-hooks
#     "PIE", # flake8-pie
#     "PL",  # pylint
#     "PTH", # flake8-use-pathlib
#     "PYI", # flake8-pyi
#     "Q",   # flake8-quotes
#     "RET", # flake8-return
#     "RSE", # flake8-raise
#     "RUF",
#     "SIM", # flake8-simplify
#     "SLF", # flake8-self
#     # "T10", # flake8-debugger
#     "T20", # flake8-print
#     "TC", # flake8-type-checking
#     "TD",  # flake8-todos
#     "TID", # flake8-tidy-imports
#     "TRY", # tryceratops
#     "UP", # pyupgrade
#     "W",  # pycodesytle warnings
#     "ANN",  # flake8-annotations
#     "CPY",  # flake8-copyright
#     "D",  # pydocstyle
#     "FIX",  # flake8-fixme
# ]
# ignore = ["TD003", "FBT003", "ISC001", "COM812", "E501", "RUF001", "D100", "D104", "FIX002"]

[tool.setuptools]
packages = ["mzs_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    # "--verbose",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests that simulate full user interaction with the plugin in a QGIS GUI environment",
    "no_qgis: Tests that don't require pyqgis or full QGIS environment",
    "display: Tests that display GUIs for visual inspection, but can be run in headless CI environments by setting QT_QPA_PLATFORM or --qgis_disable_gui",
    "visual: Tests that require visual inspection of GUIs or visual output (e.g., map rendering) and are not suitable for headless CI environments",
]

[tool.coverage.run]
source = ["mzs_tools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
